# Gale_Shapely

./: CMakeLists.txt  CheckForMatching.cpp  CheckForMatching.h  CheckPairStability.cpp  CheckPairStability.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  README.md  README.txt  StableMatchingAlgo.cpp  StableMatchingAlgo.h  Stack.cpp  Stack.h  getPairsFromFile.cpp  main.cpp  read_file.cpp  read_file.h
Gale_Shapely_lib/: CheckForMatching.cpp  CheckPairStability.cpp  CheckPairStability.h  StableMatchingAlgo.cpp  StableMatchingAlgo.h  getPairsFromFile.h  read_file.cpp  read_file.h
Gale_Shapely_lib/Data_Structures/: LinkedList.cpp  LinkedList.h  Stack.cpp
Google_tests/: AlgorithmTests.cpp  CMakeLists.txt  CheckMatchingTests.cpp  Check_Matching_Tests.cpp  LinkedListTests.cpp  LinkedListTests.h  StackTests.cpp  StackTests.h  UnitTests.cpp  UnitTests.h
